Added ability to handle input data from form. Added python forms and so more

--- a/src/templates/contact/view.html
+++ b/src/templates/contact/view.html
@@ -19,6 +19,22 @@
 		<div class="row">
 			<div class="col">
 				<p class="lead">{{ content }}</p>
+				
+				<div class="col-sm-6 col-12">
+
+					<form method="POST"> {% csrf_token %}
+						{{ form }}
+						<button class="btn-success" type="submit">Send</button>
+					</form>
+
+					<!-- <form method="POST"> {% csrf_token %}
+						<input class="form-control" type="text" name="fullname" placeholder="Name">
+						<input class="form-control" type="email" name="email" placeholder="Email">
+						<textarea class="form-control" name="content" placeholder="Your Content"></textarea>
+						<button class="btn-success" type="submit">Send</button>
+					</form> -->
+				</div>
+
 			</div>
 		</div>
 	</div>
