--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href='{% static "css/main.css" %}'>
 
 	<title>Hello, world!</title>
 </head>
@@ -18,6 +20,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
+				<img class="img-fluid" src="{% static 'img/teslacar.jpg' %}" alt="Tesla car">
 				<p class="lead">{{ content }}</p>
 			</div>
 		</div>
