--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -1,3 +1,4 @@
+{# HTML to render form on login page #}
 <form method="POST"> {% csrf_token %}
 	{{ form }}
 	<button class="btn-success" type="submit">Send</button>
