Added template files and make templates inherit from base.html, insade of models.py make reverse cal for url with name argument in urls.py

--- a/src/products/templates/products/detail.html
+++ b/src/products/templates/products/detail.html
@@ -1,7 +1,11 @@
-{{ object.title }}<br>
-{{ object.description }}<br>
-{% if object.image %}
-	<img class="img-fluid" src='{{ object.image.url }}' alt="MacBookPro-2014"><br>
-{% endif %}
+{% extends "base.html" %}
 
+{% block content %}
 
+	{{ object.title }}<br>
+	{{ object.description }}<br>
+	{% if object.image %}
+		<img class="img-fluid" src='{{ object.image.url }}' alt="MacBookPro-2014"><br>
+	{% endif %}
+
+{% endblock content %}
