--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -1,6 +1,37 @@
-{# HTML to render home page, this is the base page #}
-
+{% extends "base.html" %}
 {% load static %}
+<title>Home Page Template</title>
+
+{% block base_head %}
+	<link rel="stylesheet" type="text/css" href='{% static "css/main.css" %}'>
+{% endblock base_head %}
+
+{% block content %}
+
+<div class='text-center'>
+	<h1>{{ title }}</h1>
+	<h1>Home Page Template</h1>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<img class="img-fluid" src="{% static 'img/teslacar.jpg' %}" alt="Tesla car">
+			<p class="lead">{{ content }}</p>
+		</div>
+	</div>
+	{% if request.user.is_authenticated %}
+	<div class="row">
+		<div class="col">
+			<h1>Premimum Content</h1>
+			{{ premium_content }}
+		</div>
+	</div>
+	{% endif %}
+</div>
+
+{% endblock content %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,26 +46,7 @@
 	<title>Hello, world!</title>
 </head>
 <body>
-	<div class='text-center'>
-		<h1>{{ title }}</h1>
-		<h1>Hello, world! Working</h1>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<img class="img-fluid" src="{% static 'img/teslacar.jpg' %}" alt="Tesla car">
-				<p class="lead">{{ content }}</p>
-			</div>
-		</div>
-		{% if request.user.is_authenticated %}
-		<div class="row">
-			<div class="col">
-				<h1>Premimum Content</h1>
-				{{ premium_content }}
-			</div>
-		</div>
-		{% endif %}
-	</div>
+	
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
