--- a/src/products/templates/products/snippets/card.html
+++ b/src/products/templates/products/snippets/card.html
@@ -1,13 +1,11 @@
+
 <div class="card" style="width: 20rem;">
 	{% if instance.image %}
-		<a href="{{ instance.get_absolute_url }}">
-			<img class="card-img-top" src="{{ instance.image.url }}" alt="{{ instance.title }} logo">
-		</a>
+		<img class="card-img-top" src="{{ instance.image.url }}" alt="{{ instance.title }} logo">
 	{% endif %}
 	<div class="card-block">
 		<h4 class="card-title">{{ instance.title }}</h4>
-		<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-		<a href="{{ instance.get_absolute_url }}" class="btn btn-primary">View article</a>
-		<a href="{% url 'detail' slug=instance.slug %}" class="btn btn-success">Shortcut</a>
+		<p class="card-text">{{ instance.description }}</p>
+		<a href="{{ instance.get_absolute_url }}" class="btn btn-primary">View</a>
 	</div>
 </div>
