--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -1,5 +1,9 @@
-{# HTML to render form on login page #}
-<form method="POST"> {% csrf_token %}
+{% extends "base.html" %}
+
+{% block content %}
+<br>
+    <form method="POST"> {% csrf_token %}
 	{{ form }}
 	<button class="btn-success" type="submit">Send</button>
 </form>
+{% endblock content %}
