--- a/src/templates/base/navbar.html
+++ b/src/templates/base/navbar.html
@@ -1,1 +1,43 @@
-<h1>{{ ime_brenda }}</h1>
+{% url "home" as home_url %}
+{% url "products:list" as product_list_url %}
+{% url "contact" as contact_url %}
+{% url "login" as login_url %}
+{% url "register" as register_url %}
+
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+	<a class="navbar-brand" href="{{ home_url }}">{% if brand_name %}{{ brand_name }}{% else %}eCommerce{% endif %}</a>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link {% if request.path == home_url %}active{% endif %}" href="{{ home_url }}">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.path == contact_url %}active{% endif %}" href="{% url "contact" %}">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.path == product_list_url %}active{% endif %}" href="{% url "products:list" %}">Products</a>
+      </li>
+      {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url "login" %}">Logout</a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url "login" %}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == register_url %}active{% endif %}" href="{% url "login" %}">Register</a>
+        </li>
+      {% endif %}
+      
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
