--- a/src/products/templates/products/list.html
+++ b/src/products/templates/products/list.html
@@ -2,15 +2,26 @@
 
 {% block content %}
 
-	<div class="container">
-		<div class="row">
-			{% for obj in object_list %}
-			<div class="col">
-				{% include 'products/snippets/card.html' with instance=obj%}	
-			</div>
-			{% endfor %}
+<div class="container">
+	<div class="row">
+
+		{% for obj in object_list %}
+		<div class="col">
+			{{ forloop.counter }}
+			{% include 'products/snippets/card.html' with instance=obj%}
+
+			{% if forloop.counter|divisibleby:2 %}
+		</div></div><div class="row"><div class="col-12"><hr></div>
+		{% elif forloop.counter|divisibleby:2 %}
+		    </div></div><div class="row"><div class="col-12"><hr></div>
+			{% else %}
 		</div>
+		{% endif %}			
+
+
+		{% endfor %}
 	</div>
+</div>
 
 {% endblock content %}
 
