--- a/src/products/templates/products/snippets/card.html
+++ b/src/products/templates/products/snippets/card.html
@@ -5,7 +5,7 @@
 	{% endif %}
 	<div class="card-block">
 		<h4 class="card-title">{{ instance.title }}</h4>
-		<p class="card-text">{{ instance.description }}</p>
+		<p class="card-text">{{ instance.description|truncatewords:15 }}</p>
 		<a href="{{ instance.get_absolute_url }}" class="btn btn-primary">View</a>
 	</div>
 </div>
