Add bootstrap to all pages

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,9 +15,9 @@
 
 <body>
 	{% include "base/navbar.html" with ime_brenda='eCommerce' %}
-
-	{% block content %}{% endblock content %}
-
+	<div class="container">
+		{% block content %}{% endblock content %}
+	</div>
 	{% include "base/js.html" %}
 </body>
 
