--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <br>
-    <form method="POST"> {% csrf_token %}
+<h1>Login</h1>
+<form method="POST"> {% csrf_token %}
 	{{ form }}
 	<button class="btn-success" type="submit">Send</button>
 </form>
