--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -1,4 +1,11 @@
+
+{% extends "base.html" %}
+
+{% block content %}
+<br>
+<h1>Register</h1>
 <form method="POST"> {% csrf_token %}
 	{{ form }}
 	<button class="btn-success" type="submit">Send</button>
 </form>
+{% endblock content %}
