--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
-<title>Home Page Template</title>
+
+<title>Welcome to eCommerce</title>
 
 {% block base_head %}
 <link rel="stylesheet" type="text/css" href='{% static "css/main.css" %}'>
@@ -8,48 +9,23 @@
 
 {% block content %}
 
-<div class='text-center'>
-	<h1>{{ title }}</h1>
-	<h1>Home Page Template</h1>
-</div>
-<div class="row">
-	<div class="col">
-		<img class="img-fluid" src="{% static 'img/teslacar.jpg' %}" alt="Tesla car">
-		<p class="lead">{{ content }}</p>
+	<div class='text-center'>
+		<h1>{{ title }}</h1>
 	</div>
-</div>
-{% if request.user.is_authenticated %}
-<div class="row">
-	<div class="col">
-		<h1>Premimum Content</h1>
-		{{ premium_content }}
-	</div>
-</div>
-{% endif %}
 
+	<div class="row">
+		<div class="col">
+			<img class="img-fluid" src="{% static 'img/teslacar.jpg' %}" alt="Tesla car">
+			<p class="lead">{{ content }}</p>
+		</div>
+	</div>
+	{% if request.user.is_authenticated %}
+		<div class="row">
+			<div class="col">
+				<h1>Premimum Content</h1>
+				{{ premium_content }}
+			</div>
+		</div>
+	{% endif %}
 
 {% endblock content %}
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href='{% static "css/main.css" %}'>
-
-	<title>Hello, world!</title>
-</head>
-<body>
-	
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-</html>
